Tidies up some files, added comments, changed to correct heading numbers for accessibility. Updated some colours for proper contrast. Adjusted some spacing and formatting

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -77,7 +77,7 @@ h6,
 
 /* Block and height/width applied so the entire nav-link item becomes clickable */
 .nav-link {
-    color: white;
+    color: black;
     display: block;
     width: 100%;
     height: 100%;
@@ -121,8 +121,9 @@ h6,
 }
 
 /* Hero section fills most of the viewport, allowing space for header/footer */
-#hero-section {
-    height: calc(100vh - 120px);
+#hero-section,
+#hero {
+    height: calc(100vh - 140px);
 }
 
 /* Hero div with responsive background image and offset spacing */
@@ -133,15 +134,13 @@ h6,
     background-position: center top;
     margin-top: 80px;
     margin-bottom: 25px;
-    /* viewport height minus header and footer */
-    height: calc(100vh - 140px);
-
 }
 
-#shop {
-    height: calc(100vh - 120px);
-    margin-top: 80px;
-    margin-bottom: 25px;
+/*  */
+#shop-section,
+#shop-container,
+#card-row {
+    height: calc(100vh - 222px);
 }
 
 /* Styling for all cards across the app - creates a glassmorphic effect */
@@ -159,31 +158,44 @@ h6,
     border-top-right-radius: 16px;
 }
 
+/* Spinning loader while the dom loads content and the file content pulls through to the cards */
 .loader {
-   border-top: 16px solid var(--ecstatic-red);
-  border-right: 16px solid var(--skylla);
-  border-bottom: 16px solid var(--fuschia-blue);
-  border-left: 16px solid var(--nasturtium-shoot);
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 2s linear infinite; /* Safari */
-  animation: spin 2s linear infinite;
+    border-top: 16px solid var(--ecstatic-red);
+    border-right: 16px solid var(--skylla);
+    border-bottom: 16px solid var(--fuschia-blue);
+    border-left: 16px solid var(--nasturtium-shoot);
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    /* Safari */
+    animation: spin 2s linear infinite;
 }
 
+/* Initially hides the shop cards while the loaders are spinning */
 .shop-card {
     display: none;
 }
 
 /* Safari */
 @-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 /* Hover colour for the round socials icons */
@@ -275,6 +287,7 @@ h6,
 
     #hero-content {
         top: -370px;
+        width: 1200px;
     }
 
     .navbar-nav {
@@ -294,12 +307,18 @@ h6,
     }
 
     #hero-content {
-        top: -305px;
+        top: -400px;
+        width: 1500px;
     }
 }
 
 /* media query for screens 1900px and up*/
-@media screen and (min-width:1900px) {}
+@media screen and (min-width:1900px) {
+    #hero-content {
+        top: -330px;
+        width: 1500px;
+    }
+}
 
 /* Media query for screens 2560px and up */
 @media screen and (min-width:2560px) {
@@ -328,16 +347,13 @@ h6,
         font-size: 1.8rem;
     }
 
-    #hero-content {
-        top: -800px;
-    }
-
     .bi-yin-yang {
         font-size: 2rem;
     }
 
     #hero-content {
-        width: 2000px;
+        top: -600px;
+        width: 2200px;
     }
 
     .card {
